# rust-starter

./: .backpack-project.yaml  .gitignore  Cargo.toml  Makefile  README.md  install.ps1  install.sh  rustwrap.yaml
.github/workflows/: build.yml  release.yml
bumblefoot/: Cargo.toml
bumblefoot/src/: data.rs  lib.rs  runner.rs
src/: README.md  main.rs
starter_project/: Cargo.toml
starter_project/src/: data.rs  lib.rs  runner.rs
starter_project_lib/: Cargo.toml  README.md
starter_project_lib/examples/: demo.rs
starter_project_lib/src/: data.rs  lib.rs
starter_project_lib/src/snapshots/: starter_project_lib__data__tests__foo.snap
starter_project_simpler/: Cargo.toml  README.md
starter_project_simpler/src/: argh_ext.rs  data.rs  lib.rs  main.rs  runner.rs
starter_project_simpler/src/snapshots/: starter_project_simpler__data__tests__foo.snap
starter_project_simpler/tests/cmd/: help.trycmd
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/simple/: Cargo.toml
xtask/src/simple/src/: main.rs
