[package]
name = "bumblefoot-lib"
version = "1.2.0"
edition = "2021"
build = "build.rs"


#
# == This is a dual CLI + library crate. ==
#
# * To turn this into a pure library crate, remove [[features]] and [[bin]],
#   and remove optional deps.
# * To turn into a pure CLI crate, do the same as before, but don't remove
#   optional deps, turn them into non-optional.
#
# To use both as dual crate:
#
# 1. For a CLI, nothing needs to be done.
# 2. For a library, build using `--no-default-features`, and depend using `default-features = false`
#


[dependencies]

clap = { version = "3.0.0-beta.4", optional = true }
serde = "*"
serde_json = "*"
serde_derive = "*"
serde_yaml = "*"
env_logger = "*"
log = "0.4.14"
anyhow = "*"
console = "*"

[build-dependencies]
vergen = "*"
anyhow = "*"


[features]
default = ["cli"]
cli = ["clap"]

[[bin]]
name = "bumblefoot"
required-features = ["cli"]
