[package]
name = "starter_project"
version = "1.0.0"
edition = "2021"


#
# == This is a dual CLI + library crate. ==
#
# * To turn this into a pure library crate, remove [[features]] and [[bin]],
#   and remove optional deps.
# * To turn into a pure CLI crate, do the same as before, but don't remove
#   optional deps, turn them into non-optional.
#
# To use both as dual crate:
#
# 1. For a CLI, nothing needs to be done.
# 2. For a library, build using `--no-default-features`, and depend using `default-features = false`
#

# swaps:
# anything with __V_
#


#
# cargo binstall metadata:
#

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/__V_PROJECT_NAME__-x86_64-windows.zip"
bin-dir = "__V_PROJECT_NAME__-x86_64-windows/__V_BIN_NAME__.exe"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/__V_PROJECT_NAME__-x86_64-macos.tar.xz"
bin-dir = "__V_PROJECT_NAME__-x86_64-macos/__V_BIN_NAME__"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/__V_PROJECT_NAME__-aarch64-macos.tar.xz"
bin-dir = "__V_PROJECT_NAME__-x86_64-macos/__V_BIN_NAME__"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/__V_PROJECT_NAME__-x86_64-linux.tar.xz"
bin-dir = "__V_PROJECT_NAME__-x86_64-linux/__V_BIN_NAME__"
pkg-fmt = "txz"

# </cargo binstall>

[dependencies]

clap = { version = "4", features = ["cargo"], optional = true }
serde = "1"
serde_json = "1"
serde_derive = "1"
serde_yaml = "^0.9.0"
anyhow = "1"
console = "^0.15.0"
exitcode = "^1.1.2"
tracing = "^0.1.34"
tracing-tree = { version = "0.2.1" }
tracing-subscriber = { version = "^0.3.11", features = ["env-filter"] }


[features]
default = ["cli"]
# list optionals here:
cli = ["clap"]

[[bin]]
name = "__v_bin_name__"
path = "src/bin/main.rs"

required-features = ["cli"]
