[package]
name = "starter_project_lib"
version = "1.0.0"
edition = "2021"

# description = "..."
# authors = ["... <...>"]
# documentation = "https://docs.rs/..."
# repository = "..."
# categories = ["...", "..."]
# keywords = ["...", "..."]
# license = "Apache-2.0"
# readme = "../README.md"

[dependencies]
serde = "1"
# serde_json = "1"
# serde_derive = "1"
# serde_yaml = "^0.9.4"
# thiserror = "1"

[dev-dependencies]
insta = { version = "1.17.1", features = ["backtrace", "redactions"] }
pretty_assertions = "1"
# rstest = "^0.14.0"
# serial_test = "0.4.0"
