[package]
name = "starter_project_lib"
version = "1.0.0"
edition = "2021"

# description = "__V_DESCRIPTION__"
# authors = ["__V_AUTHOR__"]
# documentation = "https://docs.rs/__V_PROJECT_NAME__"
# repository = "__V_REPO_URL__"
# categories = ["...", "..."]
# keywords = ["...", "..."]
# license = "Apache-2.0"
# readme = "../README.md"

[[example]]
name = "demo"
required-features = ["default"]

[dependencies]
serde = { version = "1", features = ["derive"] }
# serde_json = "1"
# serde_derive = "1"
# serde_yaml = "^0.9.4"
# thiserror = "1"

[dev-dependencies]
insta = { version = "1.17.1", features = ["backtrace", "redactions"] }
pretty_assertions = "1"
clap = "4.1.8"
# rstest = "^0.14.0"
# serial_test = "0.4.0"
