[package]
name = "starter_project_simpler"
version = "1.0.0"
edition = "2021"

[dependencies]

clap = { version = "3", features = ["cargo"] }
serde = "1"
serde_json = "1"
serde_derive = "1"
serde_yaml = "^0.8.24"
env_logger = "^0.9.0"
log = "^0.4.17"
anyhow = "1"
console = "^0.15.0"

[dev-dependencies]
insta = { version = "1.17.1", features = ["backtrace", "redactions"] }
pretty_assertions = "1"
# rstest = "^0.14.0"
# serial_test = "0.4.0"
