[package]
name = "starter_project_simpler"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "starter_project_simpler"
path = "src/bin/main.rs"

[dependencies]

clap = { version = "4", features = ["cargo", "derive"] }
regex = "1.7.0"
serde = "1"
serde_json = "1"
serde_derive = "1"
serde_yaml = "^0.9.0"
log = "^0.4.17"
anyhow = "1"
console = "^0.15.0"

tracing = "^0.1.34"
tracing-tree = { version = "0.2.1" }
tracing-subscriber = { version = "^0.3.11", features = ["env-filter"] }

[dev-dependencies]
insta = { version = "1.17.1", features = ["backtrace", "redactions"] }
pretty_assertions = "1"
# rstest = "^0.14.0"
# serial_test = "0.4.0"
