[package]
name = "bumblefoot"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[dependencies]

clap = { version = "3", features = ["cargo"] }
serde = "1"
serde_json = "1"
serde_derive = "1"
serde_yaml = "^0.8.24"
env_logger = "^0.9.0"
log = "^0.4.17"
anyhow = "1"
console = "^0.15.0"

[build-dependencies]
vergen = "7"
anyhow = "1"
